Name:                   witty
Version:                0.0.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               A web server to show bottlenecks of GHC
Description:            A web server to show bottlenecks of GHC
Category:               Network, Web
Cabal-Version:          >= 1.8
Build-Type:             Simple

Executable witty
  Main-Is:              Witty.hs
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -threaded -rtsopts
  Build-Depends:        base >= 4.0 && < 5
                      , bytestring
                      , network

